// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Button renders danger variant without visual regressions 1`] = `
<button
  aria-busy="false"
  class="inline-flex items-center justify-center gap-2 rounded-lg px-4 py-2.5 text-sm font-medium transition-all duration-200 focus-ring disabled:opacity-50 disabled:cursor-not-allowed bg-red-500 text-white hover:bg-red-400 active:bg-red-500"
  type="button"
>
  danger
</button>
`;

exports[`Button renders external variant without visual regressions 1`] = `
<button
  aria-busy="false"
  class="inline-flex items-center justify-center gap-2 rounded-lg px-4 py-2.5 text-sm font-medium transition-all duration-200 focus-ring disabled:opacity-50 disabled:cursor-not-allowed bg-violet-500 text-white hover:bg-violet-400 active:bg-violet-500"
  type="button"
>
  external
</button>
`;

exports[`Button renders primary variant without visual regressions 1`] = `
<button
  aria-busy="false"
  class="inline-flex items-center justify-center gap-2 rounded-lg px-4 py-2.5 text-sm font-medium transition-all duration-200 focus-ring disabled:opacity-50 disabled:cursor-not-allowed bg-cyan-500 text-slate-950 hover:bg-cyan-400 active:bg-cyan-500"
  type="button"
>
  primary
</button>
`;

exports[`Button renders secondary variant without visual regressions 1`] = `
<button
  aria-busy="false"
  class="inline-flex items-center justify-center gap-2 rounded-lg px-4 py-2.5 text-sm font-medium transition-all duration-200 focus-ring disabled:opacity-50 disabled:cursor-not-allowed bg-slate-800 border border-slate-600 text-slate-200 hover:bg-slate-700 active:bg-slate-600"
  type="button"
>
  secondary
</button>
`;

exports[`Button renders warning variant without visual regressions 1`] = `
<button
  aria-busy="false"
  class="inline-flex items-center justify-center gap-2 rounded-lg px-4 py-2.5 text-sm font-medium transition-all duration-200 focus-ring disabled:opacity-50 disabled:cursor-not-allowed bg-amber-500 text-slate-950 hover:bg-amber-400 active:bg-amber-500"
  type="button"
>
  warning
</button>
`;
